Math.max -> Math.clamp